fix search bar on mobile (#129)

--- a/static/assets/resources/css/responsive.css
+++ b/static/assets/resources/css/responsive.css
@@ -53,7 +53,7 @@
     }
 
     #wrap .ac_input:focus {
-        width: 300px;
+        width: 270px;
     }
 
     #wrap input[type="submit"] {
